--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 
 <head>
-
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="sketch.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <meta charset="UTF-8">
+  <script src="p5.min.js"></script>
+  <script src="p5.dom.min.js"></script>
+  <script src="ml5.min.js" type="text/javascript"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -19,7 +25,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/business-casual.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -99,9 +105,10 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+ 
+  <title>Webcam Image Classification using a pre-trained customized model and p5.js</title>
+ 
+</head>
 </body>
 
 </html>
